--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <p>This car is c200 and very expensive This car is c200 and very expensive</p>
                 <h2 id="itemsPrice1" class="price">100,000$</h2>
                 <div class="colorDiv">
-                    <p id="itemsRed1" class="red itemsColor"></p>
                     <p id="itemsGray1" class="gray itemsColor"></p>
+                    <p id="itemsRed1" class="red itemsColor"></p>
                     <p id="itemsYellow1" class="yellow itemsColor"></p>
                 </div>
                 
@@ -32,8 +32,8 @@
                 <p>This car is c200 and very expensive This car is c200 and very expensive</p>
                 <h2 id="itemsPrice2" class="price">100,000$</h2>
                 <div class="colorDiv">
-                    <p id="itemsRed2" class="red itemsColor"></p>
                     <p id="itemsGray2" class="gray itemsColor"></p>
+                    <p id="itemsRed2" class="red itemsColor"></p>
                     <p id="itemsYellow2" class="yellow itemsColor"></p>
                 </div>
                 
@@ -55,8 +55,22 @@
                 <button>Add</button>
             </div>
         </div>
-    </div>
+        <div id="products">
+            <button id="productsBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+              </svg></button>
+        </div>
+        <div id="cover">
+            <button id="coverBtn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+              </svg>
+            </button>
+            <div  class="coverContainerItems">
 
+            </div>
+        </div>
+    </div>
 
 
     <script src="app.js"></script>
